--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.9.0",
+    "css-minimizer-webpack-plugin": "^6.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.7.7",
     "node-sass": "^9.0.0",
     "sass-loader": "^10.5.2",
     "style-loader": "^3.3.4",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack-dev-server": "^4.15.1"
   }
 }
