--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sass-loader": "^10.5.2",
     "style-loader": "^3.3.4",
     "terser-webpack-plugin": "^5.3.10",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   }
 }
