--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "style-loader": "^3.3.4",
     "terser-webpack-plugin": "^5.3.10",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.10.0"
+    "webpack-merge": "^5.10.0",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
